Make changes in the UI of the Frontend

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "internportal",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+ "scripts": {
+    "start": "node Backend/app.js",
+    "dev": "nodemon Backend/app.js"
   },
   "keywords": [],
   "author": "",
